@@ -1,6 +1,9 @@
 Changes between 1.1.2 and 1.1.1
 =====================================
 
+- new option: --ignore will prevent specified path from collection. 
+  Can be specified multiple times. 
+
 - install 'py.test' and `py.which` with a ``-$VERSION`` suffix to
   disambiguate between Python3, python2.X, Jython and PyPy installed versions. 
 
